Fixing tutorials alignment and adding color to code divs

--- a/css/style.css
+++ b/css/style.css
@@ -239,6 +239,7 @@ div.tuto-container-all {
 
 div.tuto-single {
     display: inline-block;
+	vertical-align: top;
     width: 25%;
     min-width: 150px;
     padding: 1em;
